# potato-shell

./: .gitignore  Cargo.toml  README.md  history.txt
src/: main.rs
