[package]
name = "potato-shell"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
colored = "2.1.0"
csv = "1.3.0"
rustyline = "13.0.0"
serde = { version = "1.0.194", features = ["derive"] }
